<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="6dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="9dp"
    tools:context="com.cellpinda.coin.wallet.MainActivity"
    >

    <Button
        android:id="@+id/btn_myaddr_etherscan"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:text="@string/txt_btn_myaddr_etherscan"
        android:theme="@style/AppTheme.Button.Small.FlatColored"
        android:layout_gravity="right|top"
        android:padding="0dp"
        android:textSize="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="5dp"
                android:layout_height="24dp"
                android:background="@color/colorAccent"
                android:layout_marginEnd="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_recv_addr"
                android:textSize="16sp"
                android:textColor="@color/colorTextLight"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_addr_recv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:maxLines="3"
            android:gravity="center_horizontal"
            />

        <ImageButton
            android:id="@+id/iv_qr_my_wallet"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:elevation="4dp"
            android:padding="1dp"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryGray"
            android:layout_marginLeft="12dp"
            android:text="@string/txt_msg_deposit_this"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            >

            <Button
                android:id="@+id/btn_share"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/txt_btn_share"
                android:theme="@style/AppTheme.Button.Flat"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="center"
                />
            <Button
                android:id="@+id/btn_copy"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/txt_btn_copy"
                android:theme="@style/AppTheme.Button.Colored"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>